--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "react-native-screens": "~4.1.0",
     "expo-linking": "~7.0.3",
     "expo-constants": "~17.0.3",
-    "expo-linear-gradient": "~14.0.1"
+    "expo-linear-gradient": "~14.0.1",
+    "react-dom": "18.3.1",
+    "react-native-web": "~0.19.13",
+    "@expo/metro-runtime": "~4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
