--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "expo": "~52.0.20",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.2",
@@ -21,7 +22,8 @@
     "react-native": "0.76.5",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "expo-secure-store": "~14.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
